# Humanoid-Robotic-Book

./: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  requirements.txt  setup.py  sidebars.js  vercel.json
.claude/: settings.local.json
.claude/agents/: docusaurus-ui-architect.md  (+2 more)
backend/: README.md  __init__.py  api_main.py  check_qdrant_data.py  main.py  pyproject.toml  qdrant_retrieval_validation.py  qdrant_retrieval_validation_report.json  requirements.txt  test_qdrant_storage.py
backend/agents/: __init__.py  agent_config.py  rag_agent.py  response_validator.py
backend/agents/tools/: __init__.py  qdrant_retrieval_tool.py
backend/api/: __init__.py  index.py  main.py
backend/api/models/: server_config.py  validation.py  validation_result.py
backend/api/routes/: __init__.py  question_answer.py
backend/config/: __init__.py  settings.py
backend/docs/: backend-validation-api-reference.md  backend-validation-automation.md  backend-validation-quickstart.md
backend/docusaurus_embedding_pipeline.egg-info/: PKG-INFO  requires.txt
backend/models/: __init__.py  request_models.py  response_models.py
backend/qdrant_data/: meta.json
backend/scripts/: dependency_utils.py  fastapi_utils.py  health_check_utils.py  logging_utils.py  monitoring_utils.py  security_utils.py  server_utils.py  startup_validator.py
backend/tests/: test_startup_validator.py  test_validation_system.py
backend/utils/: __init__.py  logging.py
docs/: index.md  intro.md
scripts/: automated-build-test.js  test-build.js  validate-build.js
(+269 files in other folders)
